# buddy

./: .gitignore  README.md  example.config.yaml  main.py  pyproject.toml  requirements.txt  sources.py  style.py
src/: app_icon.py  cache_data_files.py
src/ai_integration/: __init__.py  model.py  providers.py
src/db/: action.py
src/fetchers/: __init__.py  free_to_play_games.py  giveaways.py
src/fetchers/html/: __init__.py  bad_response_html.py  error_html_page.py  free_to_play_games_html_page.py  giveaways_not_found_screen_html.py  not_found_html_page.py
src/screens/: __init__.py  android_games_giveaways_screen.py  screens.py  search_screen.py  xbox_stuff_giveaways_screen.py
src/screens/giveaway_screens/: __init__.py  ai_bot_chat_screen.py  all_free_games_screen.py  all_free_to_play_games_screen.py  android_games_giveaways_screen.py  base_screen.py  battlenet_games_giveaways_screen.py  epic_games_giveaways_screen.py  ios_games_stuff_giveaways_screen.py  ps_stuff_giveaways_screen.py  screens.py  steam_giveaways_screen.py  switch_games_stuff_giveaways_screen.py  ubisoft_giveaways_screen.py  xbox_stuff_giveaways_screen.py
src/screens/giveaway_screens/dialogs/: ModelAuthDialog.py  SaveToDBDialog.py  __init__.py
src/screens/giveaway_screens/html/: default_display_screen_html.py  giveaways_default_screen_html.py  loading_screen.py
src/screens/threads/: __init__.py  feed_data.py  model_worker.py
