[project]
name = "buddy"
version = "0.1.0"
description = "A desktop app for gamers to discover free-to-play games, platform giveaways."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "ollama>=0.6.1",
    "pymongo>=4.16.0",
    "pyqt6>=6.10.2",
    "pyqt6-webengine>=6.10.0",
    "pyyaml>=6.0.3",
    "qtawesome>=1.4.1",
    "requests>=2.32.5",
]
